@@ -4,6 +4,9 @@ import java.awt.*;
 import java.awt.event.KeyEvent;
 import java.util.ArrayList;
 
+import packet.Packet;
+import packet.Packet00Login;
+
 public class Court {
     private static final CustomPoint[] defaultConfig = {
             new CustomPoint(10, 10),
@@ -14,7 +17,7 @@ public class Court {
             new CustomPoint(590, 300),
             new CustomPoint(300, 300)};
 
-    private ArrayList<Track> tracks;
+    private ArrayList<TrackClient> tracks;
     private ArrayList<Ball> balls;
 
     private int radius;
@@ -47,20 +50,19 @@ public class Court {
     }
 
 
-
     private void refreshTrackConfiguration(int playerNumber) {
-        tracks = new ArrayList<Track>();
-        if (playerNumber == 1){
+        tracks = new ArrayList<TrackClient>();
+        if (playerNumber == 1) {
             // only start generating tracks at 2
             return;
         }
         if (playerNumber == 2) {
-            Track left = new Track(defaultConfig[0], defaultConfig[1], defaultConfig[2], 270, 0, 5);
-            Track right = new Track(defaultConfig[3], defaultConfig[4], defaultConfig[5], 270, 0, 5);
+            TrackClient left = new TrackClient(defaultConfig[0], defaultConfig[1], defaultConfig[2], 270, 0, 5, String.valueOf(Track.tracksInit));
+            TrackClient right = new TrackClient(defaultConfig[3], defaultConfig[4], defaultConfig[5], 270, 0, 5, String.valueOf(Track.tracksInit));
             tracks.add(left);
             tracks.add(right);
-            Track top = new Track(defaultConfig[0], defaultConfig[3]);
-            Track bottom = new Track(defaultConfig[1], defaultConfig[4]);
+            TrackClient top = new TrackClient(defaultConfig[0], defaultConfig[3], String.valueOf(Track.tracksInit));
+            TrackClient bottom = new TrackClient(defaultConfig[1], defaultConfig[4], String.valueOf(Track.tracksInit));
             tracks.add(top);
             tracks.add(bottom);
             return;
@@ -70,13 +72,108 @@ public class Court {
         double adjustedAngle = 180 - interiorAngle;
         double adjustedAngleRadians = adjustedAngle / 57.3;
         for (int n = 0; n < playerNumber; n++) {
-            Track t = getTrack(n, adjustedAngleRadians);
+            TrackClient t = getNewTrack(n, adjustedAngleRadians);
             tracks.add(t);
         }
     }
 
+    private void refreshTrackConfiguration(TrackClient targetTrack, Packet.PacketTypes type) {
+        switch (type) {
+            case INVALID:
+                break;
+            case LOGIN:
+                if (tracks.size() == 0) {
+                    // only start generating tracks at 2
+                    tracks.add(targetTrack);
+                    return;
+                }
+                if (tracks.size() == 1) {
+                    tracks.add(targetTrack);
+                    TrackClient top = new TrackClient(defaultConfig[0], defaultConfig[3], "top123456");
+                    TrackClient bottom = new TrackClient(defaultConfig[1], defaultConfig[4], "bottom123456");
+                    tracks.add(top);
+                    tracks.add(bottom);
+                    return;
+                }
+                int playerNumber = tracks.size() + 1;
+                if (tracks.get(tracks.size() - 1).getId().equals("bottom123456")) {
+                    // Right now the track array list like such: [0,1,2,3] -> [left right top bottom]. We want to remove top bottom cuz they fake players.
+                    tracks.remove(3);
+                    tracks.remove(2);
+                    playerNumber -= 2;
+                }
 
-    private Track getTrack(int n, double adjustedAngleRadians) {
+                tracks.add(targetTrack);
+
+                double interiorAngle = ((180 * (playerNumber - 2)) / (double) playerNumber);
+                double adjustedAngle = 180 - interiorAngle;
+                double adjustedAngleRadians = adjustedAngle / 57.3;
+                for (int n = 0; n < playerNumber; n++) {
+                    getNewTrack(n, adjustedAngleRadians, tracks.get(n));
+                }
+                break;
+
+            case DISCONNECT:
+                if (tracks.size() == 0) {
+                    //zero player case
+                    return;
+                }
+                if (tracks.size() == 1) {
+                    //1 player case
+                    tracks.remove(targetTrack);
+                    return;
+                }
+                if (tracks.get(tracks.size() - 1).getId().equals("bottom123456")) {
+                    // two player case
+                    // Right now the track array list like such: [0,1,2,3] -> [left right top bottom]. We want to remove top bottom cuz they fake players.
+                    tracks.remove(3);
+                    tracks.remove(2);
+                    tracks.remove(targetTrack);
+                    return;
+                }
+
+                if (tracks.size() == 3) {
+                    //two player mode time!
+                    tracks.add(targetTrack);
+                    TrackClient top = new TrackClient(defaultConfig[0], defaultConfig[3], "top123456");
+                    TrackClient bottom = new TrackClient(defaultConfig[1], defaultConfig[4], "bottom123456");
+                    tracks.add(top);
+                    tracks.add(bottom);
+                    return;
+                }
+                tracks.remove(targetTrack);
+                //formula from above method
+                double adjustedAngleRadianss = (180 - ((180 * (tracks.size() - 2)) / (double) tracks.size())) / 57.3;
+                for (int n = 0; n < tracks.size(); n++) {
+                    getNewTrack(n, adjustedAngleRadianss, tracks.get(n));
+                }
+                break;
+        }
+
+    }
+
+    private void getNewTrack(int n, double adjustedAngleRadians, TrackClient oldTrack) {
+        int x1 = (int) (radius * Math.cos(n * adjustedAngleRadians) + center.x);
+        int y1 = (int) (radius * Math.sin(n * adjustedAngleRadians) + center.y);
+        int x2 = (int) (radius * Math.cos((n + 1) * adjustedAngleRadians) + center.x);
+        int y2 = (int) (radius * Math.sin((n + 1) * adjustedAngleRadians) + center.y);
+        double midx = (double) (x1 + x2) / 2;
+        double midy = (double) (y1 + y2) / 2;
+        double angle = Math.toDegrees(Math.atan2((y2 - y1), (x2 - x1)));
+        if (x2 - x1 > 0 && y2 - y1 < 0) {
+            angle += 180;
+        } else if (x2 - x1 < 0 && y2 - y1 < 0) {
+            angle += 180;
+        }
+        double velx = Player.SPEED * Math.cos(Math.toRadians(angle));
+        double vely = Player.SPEED * Math.sin(Math.toRadians(angle));
+        if (Math.abs(velx) < 0.001) velx = 0;
+        if (Math.abs(vely) < 0.001) vely = 0;
+
+        oldTrack.refresh(new CustomPoint(x1, y1), new CustomPoint(x2, y2), new CustomPoint(midx, midy), angle + Math.toRadians(90), velx, vely);
+    }
+
+    private TrackClient getNewTrack(int n, double adjustedAngleRadians) {
         int x1 = (int) (radius * Math.cos(n * adjustedAngleRadians) + center.x);
         int y1 = (int) (radius * Math.sin(n * adjustedAngleRadians) + center.y);
         int x2 = (int) (radius * Math.cos((n + 1) * adjustedAngleRadians) + center.x);
@@ -105,7 +202,7 @@ public class Court {
 
         //   System.out.println("This track's v: " + velx + "," + vely);
 
-        Track t = new Track(new CustomPoint(x1, y1), new CustomPoint(x2, y2), new CustomPoint(midx, midy), angle + Math.toRadians(90), velx, vely);
+        TrackClient t = new TrackClient(new CustomPoint(x1, y1), new CustomPoint(x2, y2), new CustomPoint(midx, midy), angle + Math.toRadians(90), velx, vely, String.valueOf(Track.tracksInit));
         return t;
     }
 
@@ -144,16 +241,20 @@ public class Court {
             }
 
         }
-
-        checkBallForPoint();
- //       displayScores();
+        if (tracks.size() >= 2) {
+            checkBallForPoint();
+        }
+        //       displayScores();
 
     }
 
     public void render(Graphics2D g2d) {
-        for (Track t : tracks) {
-            t.render(g2d);
+        if (tracks.size() >= 2) {
+            for (Track t : tracks) {
+                t.render(g2d);
+            }
         }
+
         for (Ball b : balls) {
             b.render(g2d);
         }
@@ -167,16 +268,16 @@ public class Court {
                 // respawn ball and give point to the last player.
                 //display new score.
                 // need score board thing
-                if (b.lastHitPaddleId == 0) {
-                    Track closest = tracks.getFirst();
-                    double minDis = b.getBallToTrackDistance(tracks.getFirst());
+                if (b.lastHitPaddleId == null) {
+                    Track closest = tracks.get(0);
+                    double minDis = b.getBallToTrackDistance(tracks.get(0));
                     for (Track t : tracks) {
                         double dis = b.getBallToTrackDistance(t);
                         if (dis < minDis) {
                             closest = t;
                             minDis = dis;
                         }
-                        if (t.getId() == b.lastHitPaddleId) {
+                        if (t.getId().equals(b.lastHitPaddleId)) {
                             t.getPlayer().score++;
                         }
                     }
@@ -188,7 +289,7 @@ public class Court {
                     }
                 } else {
                     for (Track t : tracks) {
-                        if (t.getId() == b.lastHitPaddleId) {
+                        if (t.getId().equals(b.lastHitPaddleId)) {
                             t.getPlayer().score++;
                         }
                     }
@@ -216,38 +317,38 @@ public class Court {
         return balls;
     }
 
-    public ArrayList<Track> getTracks() {
+    public ArrayList<TrackClient> getTracks() {
         return tracks;
     }
 
-    public void addBall(Ball e) {
-        balls.add(e);
+//    public void addBall(Ball e) {
+//        balls.add(e);
+//    }
+
+
+    public void addTrack(TrackClient t) {
+        refreshTrackConfiguration(t, Packet.PacketTypes.LOGIN);
     }
 
-    public Track addTrack(){
-        refreshTrackConfiguration(tracks.size() + 1);
-        return tracks.getLast();
-    }
-
-    public void addTrack(Track e) {
-        tracks.add(e);
-    }
-
+//    public void addTrack(TrackClient e) {
+//        tracks.add(e);
+//    }
+//
     public void removeBall(int index) {
         balls.remove(index);
     }
-
-    public void removeBall(Ball e) {
-        balls.remove(e);
-    }
-
-    public void removeTrack(int index) {
-        tracks.remove(index);
-    }
-
-    public void removeTrack(Track e) {
-        tracks.remove(e);
-    }
+//
+//    public void removeBall(Ball e) {
+//        balls.remove(e);
+//    }
+//
+//    public void removeTrack(int index) {
+//        tracks.remove(index);
+//    }
+//
+//    public void removeTrack(Track e) {
+//        tracks.remove(e);
+//    }
 
 
 }
